# MAZE_

./: DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/application/use_cases/: lk_use_case.py  message_use_case.py  payment_use_case.py  start_use_case.py  subscriptions.py
app/core/: bot_character.py
app/core/triggers/: prompts_neuromaze_1000_linked.json  scenarios.json
app/domain/: prompts.py
app/domain/entities/models/: chat.py  messages.py  subscription.py  subscription_plan.py  triggers.py  user.py
app/domain/repositories/: chat_repositories.py  get_answer_by_gpt_openai_repositories.py  message_repositories.py  subscription_repositories.py  user_repositories.py
app/domain/services/: subscription_service.py
app/infrastructure/database/: setup_db.py
app/infrastructure/database/models/: __init__.py  chat.py  message.py  payment.py  subscribe.py  user.py
app/infrastructure/logging/: setup_logger.py
app/infrastructure/openai/: get_answer_by_gpt_openai.py
app/infrastructure/redis/: __init__.py  fsm_manager.py  redis_client.py
app/infrastructure/repositories/: chat_use_repo.py  message_use_repo.py  subscription_use_repositories.py  user_use_repositories.py
app/infrastructure/services/: responses.py  youmoney.py
app/infrastructure/triggers/: trigger_loader.py  trigger_matcher.py
app/interfaces/: youmoney_webhooks.py
app/interfaces/api/: webhook.py
app/interfaces/telegram/: aiogram_app.py  handlers.py
nginx/: nginx.conf
scripts/: renew-ssl.sh  ssl-setup.sh
(+5 files in other folders)
