[tool.poetry]
name = "neuro-maze"
version = "0.1.0"
description = ""
authors = ["Michail Fedyaev <drovosekov1910@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
tortoise-orm = "^0.20.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
pydantic = "^2.4.2"
aerich = "^0.7.2"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.9.3"
pydantic-settings = "^2.0.3"
aioyoomoney-api = "^0.0.10"
python-multipart = "^0.0.20"
rapidfuzz = "^3.13.0"
yookassa = "^3.6.0"
redis = "^5.0.0"
aiogram = "^3.15.0"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
